[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Controles2D/Testes/OpcoesTopDown.gd" type="Script" id=1]

[node name="OpcoesTopDown" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -244.0
margin_top = 56.0
margin_right = -204.0
margin_bottom = 96.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = 3.0
margin_right = -68.0
margin_bottom = 3.0
rect_scale = Vector2( 7.09445, 3.70963 )
color = Color( 1, 1, 1, 0.176471 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = -59.0
margin_top = 9.0
margin_right = 139.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( -205, 58 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 225.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 31.0
margin_bottom = 17.0
text = "Tipo:"

[node name="OptionTipo" type="OptionButton" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 20.0
text = "Direcional"
items = [ "Direcional", null, false, 0, null, "Rotacional", null, false, 1, null, "Click", null, false, 2, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 24.0
margin_right = 225.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 74.0
margin_bottom = 15.0
text = "Velocidade:"

[node name="Velocidade" type="HSlider" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 78.0
margin_right = 198.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 100.0
max_value = 600.0
step = 10.0
value = 300.0

[node name="LabelVelocidade" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 202.0
margin_top = 1.0
margin_right = 202.0
margin_bottom = 15.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 44.0
margin_right = 225.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_top = 1.0
margin_right = 74.0
margin_bottom = 15.0
text = "Aceleração:"

[node name="Aceleracao" type="HSlider" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 78.0
margin_right = 198.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 10.0
max_value = 200.0
step = 10.0
value = 50.0

[node name="LabelAceleracao" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 202.0
margin_top = 1.0
margin_right = 202.0
margin_bottom = 15.0

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 64.0
margin_right = 225.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 15.0
text = "Desaceleração:"

[node name="Desaceleracao" type="HSlider" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 101.0
margin_right = 221.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 10.0
max_value = 200.0
step = 10.0
value = 50.0

[node name="LabelDesaceleracao" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 225.0
margin_top = 1.0
margin_right = 225.0
margin_bottom = 15.0

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 84.0
margin_right = 225.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer6"]
margin_top = 1.0
margin_right = 54.0
margin_bottom = 15.0
text = "Rotação:"

[node name="Rotacao" type="HSlider" parent="Control/VBoxContainer/HBoxContainer6"]
margin_left = 58.0
margin_right = 178.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 1.0
value = 51.0

[node name="LabelRotacao" type="Label" parent="Control/VBoxContainer/HBoxContainer6"]
margin_left = 182.0
margin_top = 1.0
margin_right = 182.0
margin_bottom = 15.0

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 104.0
margin_right = 225.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer7"]
margin_top = 13.0
margin_right = 91.0
margin_bottom = 27.0
text = "Trava Rotação:"

[node name="TravaRotacao" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer7"]
margin_left = 95.0
margin_right = 171.0
margin_bottom = 40.0

[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer/OptionTipo" to="." method="_on_OptionTipo_item_selected"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer3/Velocidade" to="." method="_on_Velocidade_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer4/Aceleracao" to="." method="_on_Aceleracao_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer5/Desaceleracao" to="." method="_on_Desaceleracao_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer6/Rotacao" to="." method="_on_Rotacao_value_changed"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer7/TravaRotacao" to="." method="_on_TravaRotacao_toggled"]
